traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:25: error: missing arguments for method setX in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
      setX(setX+1)
           ^