traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  
  
  
  def posFinal() : Boolean =  {
    
    var H = getMondeHauteur();
  	var L = getMondeLargeur();
        
    if ((getX() == L) && (getY() == H)) {
      return true
    }
    return false
    
  }
  
  var cpt = 0
  
  while(!posFinal()) {
    
    ecritMessage(cpt);
    
    if (getY() == getMondeHauteur) {
      setPos(getX()+1, getY()-getMondeHauteur())
    } else {
      setX(setX+1)
    }
    cpt += 1
    
    
    
    
  }
  
}